サクラダ　キャラクター画面

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    android:label="@string/スケージュール編集"
+    android:label="@string/スケジュール編集"
     app:startDestination="@id/SecondFragment">
 
     <fragment
